crates/sigil-compiler/tests/snapshots/snap_typecheck__range_for_basic.snap
---
source: crates/sigil-compiler/tests/snap_typecheck.rs
expression: "&typed"
---
TypedProgram {
    modules: [
        TypedModule {
            def_id: DefId(
                0,
            ),
            name: "m",
            ring: Inner,
            trusted: false,
            span: Span {
                start: 0,
                end: 134,
                source: SourceId(
                    4294967295,
                ),
            },
            functions: [
                TypedFunction {
                    name: "m::sum3",
                    export_name: "m__sum3",
                    kind: ModuleFunction,
                    externally_callable: true,
                    params: [
                        TypedParam {
                            name: "a",
                            ty: Array {
                                elem: I64,
                                size: 3,
                            },
                            taint: Public,
                            flow: false,
                            mutability: Default,
                        },
                    ],
                    captures: [],
                    ret: I64,
                    ret_taint: Public,
                    ret_flow: false,
                    effects: EffectSet {
                        effects: {},
                    },
                    body: TypedBlock {
                        statements: [
                            Let(
                                TypedLetStmt {
                                    name: "acc",
                                    mutable: true,
                                    ty: I64,
                                    taint: None,
                                    value: TypedExpr {
                                        ty: I64,
                                        kind: Literal(
                                            Int(
                                                0,
                                            ),
                                        ),
                                        span: Span {
                                            start: 62,
                                            end: 63,
                                            source: SourceId(
                                                4294967295,
                                            ),
                                        },
                                        refinement: None,
                                    },
                                    span: Span {
                                        start: 48,
                                        end: 64,
                                        source: SourceId(
                                            4294967295,
                                        ),
                                    },
                                },
                            ),
                            ForRange(
                                TypedForRangeStmt {
                                    var: "i",
                                    start: TypedExpr {
                                        ty: I64,
                                        kind: Literal(
                                            Int(
                                                0,
                                            ),
                                        ),
                                        span: Span {
                                            start: 78,
                                            end: 79,
                                            source: SourceId(
                                                4294967295,
                                            ),
                                        },
                                        refinement: None,
                                    },
                                    end: TypedExpr {
                                        ty: I64,
                                        kind: Literal(
                                            Int(
                                                3,
                                            ),
                                        ),
                                        span: Span {
                                            start: 81,
                                            end: 82,
                                            source: SourceId(
                                                4294967295,
                                            ),
                                        },
                                        refinement: None,
                                    },
                                    body: [
                                        Assign(
                                            TypedAssignStmt {
                                                place: TypedExpr {
                                                    ty: IntLit(
                                                        0,
                                                    ),
                                                    kind: Local(
                                                        "acc",
                                                    ),
                                                    span: Span {
                                                        start: 93,
                                                        end: 96,
                                                        source: SourceId(
                                                            4294967295,
                                                        ),
                                                    },
                                                    refinement: None,
                                                },
                                                op: None,
                                                value: TypedExpr {
                                                    ty: I64,
                                                    kind: Binary(
                                                        TypedBinaryExpr {
                                                            lhs: TypedExpr {
                                                                ty: I64,
                                                                kind: Local(
                                                                    "acc",
                                                                ),
                                                                span: Span {
                                                                    start: 99,
                                                                    end: 102,
                                                                    source: SourceId(
                                                                        4294967295,
                                                                    ),
                                                                },
                                                                refinement: None,
                                                            },
                                                            op: Add,
                                                            rhs: TypedExpr {
                                                                ty: I64,
                                                                kind: Index(
                                                                    TypedIndexExpr {
                                                                        array: TypedExpr {
                                                                            ty: Array {
                                                                                elem: I64,
                                                                                size: 3,
                                                                            },
                                                                            kind: Local(
                                                                                "a",
                                                                            ),
                                                                            span: Span {
                                                                                start: 105,
                                                                                end: 106,
                                                                                source: SourceId(
                                                                                    4294967295,
                                                                                ),
                                                                            },
                                                                            refinement: None,
                                                                        },
                                                                        index: TypedExpr {
                                                                            ty: I64,
                                                                            kind: Local(
                                                                                "i",
                                                                            ),
                                                                            span: Span {
                                                                                start: 107,
                                                                                end: 108,
                                                                                source: SourceId(
                                                                                    4294967295,
                                                                                ),
                                                                            },
                                                                            refinement: Some(
                                                                                [
                                                                                    RefinementClause {
                                                                                        field: "i",
                                                                                        op: Ge,
                                                                                        rhs: Literal(
                                                                                            0,
                                                                                        ),
                                                                                        span: Span {
                                                                                            start: 69,
                                                                                            end: 116,
                                                                                            source: SourceId(
                                                                                                4294967295,
                                                                                            ),
                                                                                        },
                                                                                    },
                                                                                    RefinementClause {
                                                                                        field: "i",
                                                                                        op: Lt,
                                                                                        rhs: Literal(
                                                                                            3,
                                                                                        ),
                                                                                        span: Span {
                                                                                            start: 69,
                                                                                            end: 116,
                                                                                            source: SourceId(
                                                                                                4294967295,
                                                                                            ),
                                                                                        },
                                                                                    },
                                                                                ],
                                                                            ),
                                                                        },
                                                                        elem_type: I64,
                                                                        bounds_proven: true,
                                                                    },
                                                                ),
                                                                span: Span {
                                                                    start: 105,
                                                                    end: 109,
                                                                    source: SourceId(
                                                                        4294967295,
                                                                    ),
                                                                },
                                                                refinement: None,
                                                            },
                                                        },
                                                    ),
                                                    span: Span {
                                                        start: 99,
                                                        end: 109,
                                                        source: SourceId(
                                                            4294967295,
                                                        ),
                                                    },
                                                    refinement: None,
                                                },
                                                span: Span {
                                                    start: 93,
                                                    end: 110,
                                                    source: SourceId(
                                                        4294967295,
                                                    ),
                                                },
                                            },
                                        ),
                                    ],
                                    span: Span {
                                        start: 69,
                                        end: 116,
                                        source: SourceId(
                                            4294967295,
                                        ),
                                    },
                                },
                            ),
                            Return(
                                TypedReturnStmt {
                                    value: Some(
                                        TypedExpr {
                                            ty: I64,
                                            kind: Local(
                                                "acc",
                                            ),
                                            span: Span {
                                                start: 128,
                                                end: 131,
                                                source: SourceId(
                                                    4294967295,
                                                ),
                                            },
                                            refinement: None,
                                        },
                                    ),
                                    span: Span {
                                        start: 121,
                                        end: 132,
                                        source: SourceId(
                                            4294967295,
                                        ),
                                    },
                                },
                            ),
                        ],
                        span: Span {
                            start: 42,
                            end: 134,
                            source: SourceId(
                                4294967295,
                            ),
                        },
                        guaranteed_return: true,
                    },
                    span: Span {
                        start: 10,
                        end: 134,
                        source: SourceId(
                            4294967295,
                        ),
                    },
                },
            ],
        },
    ],
    records: {},
    enums: {},
    effect_registry: EffectRegistry {
        effects: {
            "FFI": 0,
            "Unsafe": 1,
        },
        next_id: 2,
    },
    effect_ops: {},
    instance_homes: {},
}
