crates/sigil-compiler/tests/snapshots/snap_typecheck__region_reclaim.snap
---
source: crates/sigil-compiler/tests/snap_typecheck.rs
expression: "&typed"
---
TypedProgram {
    modules: [
        TypedModule {
            def_id: DefId(
                0,
            ),
            name: "m",
            ring: Inner,
            trusted: false,
            span: Span {
                start: 0,
                end: 156,
                source: SourceId(
                    4294967295,
                ),
            },
            functions: [
                TypedFunction {
                    name: "m::run",
                    export_name: "m__run",
                    kind: ModuleFunction,
                    externally_callable: true,
                    params: [],
                    captures: [],
                    ret: I64,
                    ret_taint: Public,
                    ret_flow: false,
                    effects: EffectSet {
                        effects: {},
                    },
                    body: TypedBlock {
                        statements: [
                            Expr(
                                TypedExprStmt {
                                    expr: TypedExpr {
                                        ty: Unit,
                                        kind: Region(
                                            TypedRegionExpr {
                                                name: "scratch",
                                                limit: TypedExpr {
                                                    ty: I64,
                                                    kind: Literal(
                                                        Int(
                                                            64,
                                                        ),
                                                    ),
                                                    span: Span {
                                                        start: 63,
                                                        end: 65,
                                                        source: SourceId(
                                                            4294967295,
                                                        ),
                                                    },
                                                    refinement: None,
                                                },
                                                body: TypedBlock {
                                                    statements: [
                                                        Let(
                                                            TypedLetStmt {
                                                                name: "inner",
                                                                mutable: false,
                                                                ty: I64,
                                                                taint: None,
                                                                value: TypedExpr {
                                                                    ty: I64,
                                                                    kind: Literal(
                                                                        Int(
                                                                            42,
                                                                        ),
                                                                    ),
                                                                    span: Span {
                                                                        start: 94,
                                                                        end: 96,
                                                                        source: SourceId(
                                                                            4294967295,
                                                                        ),
                                                                    },
                                                                    refinement: None,
                                                                },
                                                                span: Span {
                                                                    start: 77,
                                                                    end: 97,
                                                                    source: SourceId(
                                                                        4294967295,
                                                                    ),
                                                                },
                                                            },
                                                        ),
                                                        Let(
                                                            TypedLetStmt {
                                                                name: "_used",
                                                                mutable: false,
                                                                ty: I64,
                                                                taint: None,
                                                                value: TypedExpr {
                                                                    ty: I64,
                                                                    kind: Binary(
                                                                        TypedBinaryExpr {
                                                                            lhs: TypedExpr {
                                                                                ty: I64,
                                                                                kind: Local(
                                                                                    "inner",
                                                                                ),
                                                                                span: Span {
                                                                                    start: 123,
                                                                                    end: 128,
                                                                                    source: SourceId(
                                                                                        4294967295,
                                                                                    ),
                                                                                },
                                                                                refinement: None,
                                                                            },
                                                                            op: Add,
                                                                            rhs: TypedExpr {
                                                                                ty: I64,
                                                                                kind: Literal(
                                                                                    Int(
                                                                                        1,
                                                                                    ),
                                                                                ),
                                                                                span: Span {
                                                                                    start: 131,
                                                                                    end: 132,
                                                                                    source: SourceId(
                                                                                        4294967295,
                                                                                    ),
                                                                                },
                                                                                refinement: None,
                                                                            },
                                                                        },
                                                                    ),
                                                                    span: Span {
                                                                        start: 123,
                                                                        end: 132,
                                                                        source: SourceId(
                                                                            4294967295,
                                                                        ),
                                                                    },
                                                                    refinement: None,
                                                                },
                                                                span: Span {
                                                                    start: 106,
                                                                    end: 133,
                                                                    source: SourceId(
                                                                        4294967295,
                                                                    ),
                                                                },
                                                            },
                                                        ),
                                                    ],
                                                    span: Span {
                                                        start: 67,
                                                        end: 139,
                                                        source: SourceId(
                                                            4294967295,
                                                        ),
                                                    },
                                                    guaranteed_return: false,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 48,
                                            end: 139,
                                            source: SourceId(
                                                4294967295,
                                            ),
                                        },
                                        refinement: None,
                                    },
                                    span: Span {
                                        start: 48,
                                        end: 140,
                                        source: SourceId(
                                            4294967295,
                                        ),
                                    },
                                },
                            ),
                            Return(
                                TypedReturnStmt {
                                    value: Some(
                                        TypedExpr {
                                            ty: I64,
                                            kind: Literal(
                                                Int(
                                                    1,
                                                ),
                                            ),
                                            span: Span {
                                                start: 152,
                                                end: 153,
                                                source: SourceId(
                                                    4294967295,
                                                ),
                                            },
                                            refinement: None,
                                        },
                                    ),
                                    span: Span {
                                        start: 145,
                                        end: 154,
                                        source: SourceId(
                                            4294967295,
                                        ),
                                    },
                                },
                            ),
                        ],
                        span: Span {
                            start: 42,
                            end: 156,
                            source: SourceId(
                                4294967295,
                            ),
                        },
                        guaranteed_return: true,
                    },
                    span: Span {
                        start: 10,
                        end: 156,
                        source: SourceId(
                            4294967295,
                        ),
                    },
                },
            ],
        },
    ],
    records: {},
    enums: {},
    effect_registry: EffectRegistry {
        effects: {
            "FFI": 0,
            "Unsafe": 1,
        },
        next_id: 2,
    },
    effect_ops: {},
    instance_homes: {},
}
